# rag-system

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  render.yaml  requirements-backend.txt  requirements.txt
.streamlit/: config.toml
data/chunks/: chunks.json
data/embeddings/: embedding_stats.json  vectordb_stats.json
data/monitoring/: queries.db
data/qdrant/: raft_state.json
data/qdrant/collections/rag_chunks/0/: newest_clocks.json  replica_state.json
data/qdrant/collections/rag_chunks/0/segments/58447f1f-fb5c-4fa5-b860-43b649228ae8/: mutable_id_tracker.mappings  mutable_id_tracker.versions
data/qdrant/collections/rag_chunks/0/segments/91e7f0bc-7951-4d4b-b0e9-f0d6f1f26f66/: mutable_id_tracker.mappings  mutable_id_tracker.versions
data/qdrant/collections/rag_chunks/0/segments/9a9cc611-ea79-43c7-8736-90f67cbce317/: mutable_id_tracker.mappings  mutable_id_tracker.versions
docker/: Dockerfile  docker-compose.yml
frontend/: auth.py  streamlit_app.py
frontend/.streamlit/: config.toml
frontend/pages/: 2_Monitoring.py
scripts/: ask.py  create_chunks.py  create_embeddings.py  ingest_documents.py  populate_vectordb.py  serve.py  test_retrieval.py
src/rag_system/api/: app.py  models.py  routes.py
src/rag_system/config/: settings.py
src/rag_system/embeddings/: batch_processor.py  embedding_model.py
src/rag_system/generation/: llm_client.py  prompts.py  response_generator.py
src/rag_system/ingestion/: chunker.py  pdf_loader.py  preprocessor.py
src/rag_system/monitoring/: database.py
src/rag_system/retrieval/: hybrid_search.py  reranker.py  retriever.py
src/rag_system/utils/: logger.py
src/rag_system/vectorstore/: indexer.py  store.py
(+9 files in other folders)
