[project]
name = "rag-system"
version = "0.1.0"
description = "RAG system for ECOICE project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "docling>=2.69.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.11.0",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "ipython>=8.18.1",
    "pytest>=8.4.2",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
